For a detailed view of what's changed, refer to the {url-repo}/commits[commit history] of this project.

== Unreleased

=== Changed

* Only attempt to load search stylesheet if specified in `data-stylesheet` attribute on search script (#20)
* Don't parse HTML of pages that have the `noindex` AsciiDoc attribute (#19)

== 1.0.0-alpha.1 (2021-12-20)

=== Added

* Initial rerelease of Antora Lunr integration as an Antora extension
* Expose `generateIndex` as exported function of main script and require path `@antora/lunr-extension/generate-index` (#9)

=== Changed

* Move lib/extension.js to lib/index.js (#6)
* Move supplemental_ui/js/vendor/search.js to supplemental_ui/js/search-ui.js
* Don't vendor lunr.js script in repository; grab it from require path (#11)
* Configure package exports to both limit what files can be required and to define a require API (#6)
* Use generator context bound to register function of extension instead of function argument
* Pass logger as keyword argument named `logger` to `generateIndex` function (#10)
* Make keyword arguments on `generateIndex` function optional (#10)
* Automatically manage env var to activate elements in UI; make `DOCSEARCH_ENABLED` and `DOCSEARCH_ENGINE` env vars obsolete (#12)
* Move the responsibility of inserting the search stylesheet to the search script; drop the head-meta.hbs template from the supplemental UI (#12)
* Pass site root path using `data-site-root-path` attribute on script tag instead of `data-base-path`
* Move the responsibility of including the search scripts to the UI; move footer-scripts.hbs to search-scripts.hbs
* Only style the highlighted term in bold; style the document title in bold; adjust the font color and spacing in results
* Increase the maximum snippet length from 15 to 100
* Convert README from Markdown to AsciiDoc
* Change license from MIT to MPL-2.0

=== Fixed

* Catch invalid query and only log message at debug level if lunr-debug=1 query string parameter is set (#13)