@@ -25,8 +25,15 @@ function generateIndex (playbook, contentCatalog, { indexLatestOnly = false, lan
   const indexLanguages = languages.join(', ')
   logger.info(`Building search index with the language(s): ${indexLanguages}`)
 
-  // Only gather pages that Antora will publish
-  const pages = contentCatalog.getPages((page) => page.out && page.asciidoc?.attributes?.noindex == null)
+  // Select indexable pages
+  const pages = contentCatalog.getPages((page) => {
+    if (!page.out || page.asciidoc?.attributes?.noindex != null) return
+    if (indexLatestOnly) {
+      const component = contentCatalog.getComponent(page.src.component)
+      if (contentCatalog.getComponentVersion(component, page.src.version) !== component.latest) return
+    }
+    return true
+  })
   if (!pages.length) return {}
 
   // Map of Lunr ref to document
